# Robotics-Project

./: README.md
turtlebot3_autorace_camera/: CMakeLists.txt
turtlebot3_autorace_camera/calibration/extrinsic_calibration/: compensation.yaml  projection.yaml
turtlebot3_autorace_camera/calibration/intrinsic_calibration/: camerav2_320x240_30fps.yaml
turtlebot3_autorace_detect/nodes/: detect_lane
turtlebot3_autorace_driving/: CMakeLists.txt  package.xml
turtlebot3_autorace_driving/nodes/: Niryo.py  control_lane  control_lane2  detect_aruco.py
